--- a/admin/src/pages/newProduct/newProduct.css
+++ b/admin/src/pages/newProduct/newProduct.css
@@ -5,13 +5,16 @@
 
 .addProductForm {
     margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .addProductItem {
-    width: 250px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    margin-right: 20px;
 }
 
 .addProductItem>label {
@@ -29,6 +32,7 @@
 }
 
 .addProductButton {
+    width: 200px;
     margin-top: 10px;
     padding: 7px 10px;
     border: none;
